--- a/Crunchers/Views/Admin/ManageProduct.cshtml
+++ b/Crunchers/Views/Admin/ManageProduct.cshtml
@@ -1,4 +1,5 @@
-﻿@model Crunchers.Controllers.AdminController.ProductAdminResponse
+﻿@using System.Activities.Expressions
+@model Crunchers.Controllers.AdminController.ProductAdminResponse
 <div id="LoadingImage" style="display:none;background-color: rgb(255, 255, 255); opacity: 0.7; width: 100%; height: 100%; position: absolute; top: 0px; left: 0px; z-index: 99999;">
     <img style="display: block;margin-left: auto;margin-right: auto" src="https://igc-market.ru/images/loading.gif"/>
 </div>
@@ -51,42 +52,50 @@
     var i = 0;
     var characteristics = Model.Characteristics.ToList();
     <div id='newCharacteristics'>
-        @foreach (var productChar in Model.Products)
+        @if (characteristics.Count != 0)
         {
-            <text>@characteristics[i].CharacteristicName</text>
-            if (characteristics[i].CharacteristicType == "Строковое значение")
+            foreach (var productChar in Model.Products)
             {
-                <input id="Name=@characteristics[i].CharacteristicId" placeholder="Введите строковое значение для характеристики" value="@productChar.ValueToCharName.Item2"/>
-            }
-            else
-            {
-                <input id="Name=@characteristics[i].CharacteristicId" placeholder="Введите числовое значение для характеристики" value="@productChar.ValueToCharName.Item2"/>
-                if (characteristics[i].Unit != null && characteristics[i].Unit != "")
+                <text>@characteristics[i].CharacteristicName</text>
+                if (characteristics[i].CharacteristicType == "Строковое значение")
                 {
-                    <text>(в @(characteristics[i].Unit))</text>
+                    <input id="Name=@characteristics[i].CharacteristicId" placeholder="Введите строковое значение для характеристики" value="@productChar.ValueToCharName.Item2"/>
                 }
-                <text>(0 в случае отсутствия)</text>
+                else
+                {
+                    <input id="Name=@characteristics[i].CharacteristicId" placeholder="Введите числовое значение для характеристики" value="@productChar.ValueToCharName.Item2"/>
+                    if (characteristics[i].Unit != null && characteristics[i].Unit != "")
+                    {
+                        <text>(в @(characteristics[i].Unit))</text>
+                    }
+                    <text>(0 в случае отсутствия)</text>
+                }
+                i++;
+                <br/>
             }
-            i++;
-            <br/>
+            for (var j = i + 1; j < characteristics.Count; j++)
+            {
+                <text>@characteristics[i].CharacteristicName</text>
+                if (characteristics[i].CharacteristicType == "Строковое значение")
+                {
+                    <input id="Name=@characteristics[i].CharacteristicId" placeholder="Введите строковое значение для характеристики"/>
+                }
+                else
+                {
+                    <input id="Name=@characteristics[i].CharacteristicId" placeholder="Введите числовое значение для характеристики"/>
+                    if (characteristics[i].Unit != null && characteristics[i].Unit != "")
+                    {
+                        <text>(в @(characteristics[i].Unit))</text>
+                    }
+                    <text>(0 в случае отсутствия)</text>
+                }
+            }
         }
-        @for (var j = i + 1; j < characteristics.Count; j++)
+        else
         {
-            <text>@characteristics[i].CharacteristicName</text>
-            if (characteristics[i].CharacteristicType == "Строковое значение")
-            {
-                <input id="Name=@characteristics[i].CharacteristicId" placeholder="Введите строковое значение для характеристики"/>
-            }
-            else
-            {
-                <input id="Name=@characteristics[i].CharacteristicId" placeholder="Введите числовое значение для характеристики"/>
-                if (characteristics[i].Unit != null && characteristics[i].Unit != "")
-                {
-                    <text>(в @(characteristics[i].Unit))</text>
-                }
-                <text>(0 в случае отсутствия)</text>
-            }
+            <text>Добавьте какие-либо характериситики.</text>
         }
+       
     </div>
     <a onclick="ChangeProduct()">Изменить товар</a>
 }
