--- a/Crunchers/Views/Home/Index.cshtml
+++ b/Crunchers/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model IEnumerable<Crunchers.Models.ProductModel>
+@{
     ViewBag.Title = "Home Page";
 }
 <div class="jumbotron">
@@ -15,18 +16,15 @@
             <a class="btn btn-default" href="@Url.RouteUrl(new {controller = "Catalog", action = "Index"})">Catalog &raquo;</a>
         </p>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p>
-            <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a>
-        </p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p>
-            <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a>
-        </p>
-    </div>
+    <br/>
+    <br/>
+    @foreach (var product in Model)
+    {
+        <a href="/Catalog/Product?productId=@product.ProductId">
+            <img src="@product.ImageLink" alt="Изображение отсутствует " width="300" height="300"/>
+        </a>
+        <a href="/Catalog/Product?productId=@product.ProductId">@product.ProductName</a>
+        <br/>
+    }
+
 </div>
