--- a/Crunchers/Views/Admin/ManageCategoryProducts.cshtml
+++ b/Crunchers/Views/Admin/ManageCategoryProducts.cshtml
@@ -5,7 +5,7 @@
 <script>
     let urlParams = new URLSearchParams(window.location.search);
     function AddProduct() {
-        let inpObj = document.getElementById("productNameInput");
+        let inpObj = document.getElementById("Form=newProduct");
               if (!inpObj.checkValidity()) {
               } else {
        var values = [];
@@ -63,11 +63,11 @@
     <input type="hidden" name="categoryId" value="@ViewBag.categoryId" />
     <input type="submit" value="Upload image"/>
 </form>
-<form>
+<form id="Form=newProduct">
     <form>
         <input id="productImageInput" placeholder="Вставьте ссылку на изображение" value="@ViewBag.imageLink" />
         <input id="productNameInput" placeholder="Введите название товара" minlength="3" required/>
-        <input id="productPriceInput" placeholder="Введите цену товара"/>
+        <input id="productPriceInput" type="number" required placeholder="Введите цену товара"/>
     </form>
     <br/>
     <div id="newCharacteristics">
@@ -76,11 +76,12 @@
             <label>@characteristic.CharacteristicName:</label>
             if (characteristic.CharacteristicType == "Строковое значение")
             {
-                <input id="Name=@characteristic.CharacteristicId" placeholder="Введите строковое значение для характеристики"/>
+                <input id="Name=@characteristic.CharacteristicId"  pattern="[^_]+"  placeholder="Введите строковое значение для характеристики"/> 
+                <text>(без символа "_")</text>
             }
             else
             {
-                <input id="Name=@characteristic.CharacteristicId" placeholder="Введите числовое значение для характеристики"/>
+                <input id="Name=@characteristic.CharacteristicId" type="number" required placeholder="Введите числовое значение для характеристики"/>
                 if (characteristic.Unit != null || characteristic.Unit != "")
                 {
                     <text>(в @(characteristic.Unit))(0 в случае отсутствия)</text>
