--- a/Crunchers/Views/Admin/ManageProduct.cshtml
+++ b/Crunchers/Views/Admin/ManageProduct.cshtml
@@ -6,7 +6,7 @@
 <script>
     let urlParams = new URLSearchParams(window.location.search);
     function ChangeProduct() {
-         let inpObj = document.getElementById("productNameInput");
+         let inpObj = document.getElementById("productInfo");
                                   if (!inpObj.checkValidity()) {
                                   } else {
        var values = [];
@@ -42,60 +42,62 @@
     }}
 </script>
 <h1>@Model.Products.FirstOrDefault().ProductName</h1>
-@{
-    <form>
-        <input id="productImageInput" placeholder="Вставьте ссылку на изображение" value="@Model.Products.FirstOrDefault().ImageLink"/>
-        <input id="productNameInput" placeholder="Введите название товара" value="@Model.Products.FirstOrDefault().ProductName" minlength="3" required/>
-        <input id="productPriceInput" placeholder="Введите цену товара" value="@Model.Products.FirstOrDefault().ProductPrice"/>
-    </form>
-    <hr/>
-    var i = 0;
-    var characteristics = Model.Characteristics.ToList();
-    <div id='newCharacteristics'>
-        @if (characteristics.Count != 0)
-        {
-            foreach (var productChar in Model.Products)
+<form id="productInfo">
+    @{
+        <form>
+            <input id="productImageInput" placeholder="Вставьте ссылку на изображение" value="@Model.Products.FirstOrDefault().ImageLink"/>
+            <input id="productNameInput" placeholder="Введите название товара" value="@Model.Products.FirstOrDefault().ProductName" minlength="3" required/>
+            <input id="productPriceInput" placeholder="Введите цену товара" type="number" required value="@Model.Products.FirstOrDefault().ProductPrice"/>
+        </form>
+        <hr/>
+        var i = 0;
+        var characteristics = Model.Characteristics.ToList();
+        <div id='newCharacteristics'>
+            @if (characteristics.Count != 0)
             {
-                <text>@characteristics[i].CharacteristicName</text>
-                if (characteristics[i].CharacteristicType == "Строковое значение")
+                foreach (var productChar in Model.Products)
                 {
-                    <input id="Name=@characteristics[i].CharacteristicId" placeholder="Введите строковое значение для характеристики" value="@productChar.ValueToCharName.Item2"/>
-                }
-                else
-                {
-                    <input id="Name=@characteristics[i].CharacteristicId" placeholder="Введите числовое значение для характеристики" value="@productChar.ValueToCharName.Item2"/>
-                    if (characteristics[i].Unit != null && characteristics[i].Unit != "")
+                    <text>@characteristics[i].CharacteristicName</text>
+                    if (characteristics[i].CharacteristicType == "Строковое значение")
                     {
-                        <text>(в @(characteristics[i].Unit))</text>
+                        <input id="Name=@characteristics[i].CharacteristicId" pattern="[^_]+"  placeholder="Введите строковое значение для характеристики" value="@productChar.ValueToCharName.Item2"/>
                     }
-                    <text>(0 в случае отсутствия)</text>
+                    else
+                    {
+                        <input id="Name=@characteristics[i].CharacteristicId" type="number" required placeholder="Введите числовое значение для характеристики" value="@productChar.ValueToCharName.Item2"/>
+                        if (!string.IsNullOrEmpty(characteristics[i].Unit))
+                        {
+                            <text>(в @(characteristics[i].Unit))</text>
+                        }
+                        <text>(0 в случае отсутствия)</text>
+                    }
+                    i++;
+                    <br/>
                 }
-                i++;
-                <br/>
+                for (var j = i + 1; j < characteristics.Count; j++)
+                {
+                    <text>@characteristics[i].CharacteristicName</text>
+                    if (characteristics[i].CharacteristicType == "Строковое значение")
+                    {
+                        <input id="Name=@characteristics[i].CharacteristicId" pattern="[^_]+"  placeholder="Введите строковое значение для характеристики"/>
+                    }
+                    else
+                    {
+                        <input id="Name=@characteristics[i].CharacteristicId" type="number" required placeholder="Введите числовое значение для характеристики"/>
+                        if (!string.IsNullOrEmpty(characteristics[i].Unit))
+                        {
+                            <text>(в @(characteristics[i].Unit))</text>
+                        }
+                        <text>(0 в случае отсутствия)</text>
+                    }
+                }
             }
-            for (var j = i + 1; j < characteristics.Count; j++)
+            else
             {
-                <text>@characteristics[i].CharacteristicName</text>
-                if (characteristics[i].CharacteristicType == "Строковое значение")
-                {
-                    <input id="Name=@characteristics[i].CharacteristicId" placeholder="Введите строковое значение для характеристики"/>
-                }
-                else
-                {
-                    <input id="Name=@characteristics[i].CharacteristicId" placeholder="Введите числовое значение для характеристики"/>
-                    if (characteristics[i].Unit != null && characteristics[i].Unit != "")
-                    {
-                        <text>(в @(characteristics[i].Unit))</text>
-                    }
-                    <text>(0 в случае отсутствия)</text>
-                }
+                <text>Добавьте какие-либо характериситики.</text>
             }
-        }
-        else
-        {
-            <text>Добавьте какие-либо характериситики.</text>
-        }
-       
-    </div>
-    <a onclick="ChangeProduct()">Изменить товар</a>
-}
+
+        </div>
+        <a onclick="ChangeProduct()">Изменить товар</a>
+    }
+</form>
