--- a/Crunchers/Views/Admin/ManageProduct.cshtml
+++ b/Crunchers/Views/Admin/ManageProduct.cshtml
@@ -7,7 +7,8 @@
     let urlParams = new URLSearchParams(window.location.search);
     function ChangeProduct() {
          let inpObj = document.getElementById("productInfo");
-                                  if (!inpObj.checkValidity()) {
+          let infoObj=document.getElementById("newCharacteristics");
+                                  if (!inpObj.checkValidity() || !infoObj.checkValidity()) {
                                   } else {
        var values = [];
        var characteristicNodes = document.getElementById('newCharacteristics').getElementsByTagName('input');
@@ -45,14 +46,14 @@
 <form id="productInfo">
     @{
         <form>
-            <input id="productImageInput" placeholder="Вставьте ссылку на изображение" value="@Model.Products.FirstOrDefault().ImageLink"/>
-            <input id="productNameInput" placeholder="Введите название товара" value="@Model.Products.FirstOrDefault().ProductName" minlength="3" required/>
-            <input id="productPriceInput" placeholder="Введите цену товара" type="number" required value="@Model.Products.FirstOrDefault().ProductPrice"/>
+            <input id="productImageInput" placeholder="Вставьте ссылку на изображение" maxlength="255" value="@Model.Products.FirstOrDefault().ImageLink"/>
+            <input id="productNameInput" placeholder="Введите название товара" value="@Model.Products.FirstOrDefault().ProductName" minlength="3" maxlength="100"  required/>
+            <input id="productPriceInput" placeholder="Введите цену товара" type="number" max="99999999" required value="@Model.Products.FirstOrDefault().ProductPrice"/>
         </form>
         <hr/>
         var i = 0;
         var characteristics = Model.Characteristics.ToList();
-        <div id='newCharacteristics'>
+        <form id='newCharacteristics'>
             @if (characteristics.Count != 0)
             {
                 foreach (var productChar in Model.Products)
@@ -60,11 +61,11 @@
                     <text>@characteristics[i].CharacteristicName</text>
                     if (characteristics[i].CharacteristicType == "Строковое значение")
                     {
-                        <input id="Name=@characteristics[i].CharacteristicId" pattern="[^_]+"  placeholder="Введите строковое значение для характеристики" value="@productChar.ValueToCharName.Item2"/>
+                        <input id="Name=@characteristics[i].CharacteristicId" pattern="[^_]+" maxlength="100" placeholder="Введите строковое значение для характеристики" value="@productChar.ValueToCharName.Item2"/>
                     }
                     else
                     {
-                        <input id="Name=@characteristics[i].CharacteristicId" type="number" required placeholder="Введите числовое значение для характеристики" value="@productChar.ValueToCharName.Item2"/>
+                        <input id="Name=@characteristics[i].CharacteristicId" type="number" max="99999999"  min="0" required placeholder="Введите числовое значение для характеристики" value="@productChar.ValueToCharName.Item2"/>
                         if (!string.IsNullOrEmpty(characteristics[i].Unit))
                         {
                             <text>(в @(characteristics[i].Unit))</text>
@@ -79,11 +80,11 @@
                     <text>@characteristics[i].CharacteristicName</text>
                     if (characteristics[i].CharacteristicType == "Строковое значение")
                     {
-                        <input id="Name=@characteristics[i].CharacteristicId" pattern="[^_]+"  placeholder="Введите строковое значение для характеристики"/>
+                        <input id="Name=@characteristics[i].CharacteristicId" pattern="[^_]+" maxlength="100"  placeholder="Введите строковое значение для характеристики"/>
                     }
                     else
                     {
-                        <input id="Name=@characteristics[i].CharacteristicId" type="number" required placeholder="Введите числовое значение для характеристики"/>
+                        <input id="Name=@characteristics[i].CharacteristicId" type="number" max="99999999" min="0" required placeholder="Введите числовое значение для характеристики"/>
                         if (!string.IsNullOrEmpty(characteristics[i].Unit))
                         {
                             <text>(в @(characteristics[i].Unit))</text>
@@ -97,7 +98,7 @@
                 <text>Добавьте какие-либо характериситики.</text>
             }
 
-        </div>
+        </form>
         <a onclick="ChangeProduct()">Изменить товар</a>
     }
 </form>
