--- a/Crunchers/Views/Admin/ManageActiveOrders.cshtml
+++ b/Crunchers/Views/Admin/ManageActiveOrders.cshtml
@@ -173,7 +173,7 @@ $("#LoadingImage").show();
 <section class="clean-block clean-blog-list dark">
     <div class="container">
         <div class="block-heading">
-            <h1 class="text-i">Управление заказами</h1>
+            <h1 class="text-i">Управление активными заказами</h1>
         </div>
     
         @foreach (var order in Model)
