--- a/Crunchers/Views/Shared/_Layout.cshtml
+++ b/Crunchers/Views/Shared/_Layout.cshtml
@@ -14,16 +14,24 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/Scripts/jquery-3.3.1.js")
-    
+
 
 
 </head>
 @*найти способ заменить цвет текста*@
-@*<style>
-.navbar-fixed-top{
-background-color: rgb(255,193,32) !important;
-</style>*@
-
+<style>
+    .navbar-fixed-top{
+        background: white; 
+        border-bottom-color: orange;
+        
+    }
+    .navbar-fixed-top a{
+     color: #0f0f0f !important;
+    }
+    .navbar-fixed-top a:hover{
+         color: orange !important;
+        }
+</style>
 <body>
 
 <div class="navbar navbar-inverse navbar-fixed-top">
@@ -37,13 +45,15 @@ background-color: rgb(255,193,32) !important;
             @Html.ActionLink("Crunchers", "Index", "Home", new {area = ""}, new {@class = "navbar-brand"})
         </div>
         <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">\
+            <ul class="nav navbar-nav">
                 <li>@Html.ActionLink("Домашняя страница", "Index", "Home")</li>
-                <li>
-                    <form>
-                        Title: <input id="searchField" type="text"/>
-                        <a onclick="location.href='/search?text='+document.getElementById('searchField').value" class="Button">Text</a>
-                    </form>
+                <li style="margin-top: 12px">
+                    <input style=" width: 86%; border-color: orange; border-radius: 6px" id="searchField" type="text"/>
+                    <label for="searchField">
+                        <a onclick="location.href='/search?text='+document.getElementById('searchField').value">
+                            <img width="20" height="20" src="https://cdn0.iconfinder.com/data/icons/it-hardware/100/search-512.png" alt="&#128270;"/>
+                        </a>
+                    </label>
                 </li>
             </ul>
             @Html.Partial("_LoginPartial")
